# c2-libzdb2

./: .clang-format  AUTHOR  CMakeLists.txt  README.md
.github/workflows/: cmake.yml
ci/: test.sh  zfs-2.1.5.sh
cmake/: FindSPL.cmake  FindZFS.cmake
include/: c2_libnvpair.h  c2_vdev_raidz.h  libzdb.h  list.h
include/libzdb/: dump.h  file.h  libnvpair.h  libzdb.h  list.h  reconstruct.h  vdev_raidz.h  zpool.h
src/: CMakeLists.txt  c2_libnvpair.c  c2_vdev_raidz.c  dump_and_reconstruct.c  dump_dvas.c  libzdb.c  libzdb_pp.cc  list.c  reconstruct.c  reconstruct.cpp
src/libzdb/: file.c  libnvpair.c  list.c  reconstruct.c  vdev_raidz.c  zdb.c
